--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title:            Site Title
-description:      Describe your website.
+title:            Statistical Genetics Laboratory
+description:      Department of Genetics, ESALQ/USP
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://augusto-garcia.github.io/minimal-mistakes/
 
 # Owner/author information
 owner:
-  name:           Your Name
-  avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  name:           Statistical Genetics
+  avatar:         LogoLab.jpg
+  bio:            "Department of Genetics, ESALQ/USP"
+  email:          aafgarci@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:        
+  twitter: aafgarci       
   facebook:       
   github:         
   stackoverflow: 
@@ -23,7 +23,7 @@ owner:
   steam: 
   dribbble: 
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:
+  google_plus: https://plus.google.com/+AntonioAugustoFGarcia
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:   
