--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,17 @@ links:
     url: /posts/
   - title: Theme Setup
     url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
-    external: true
+#  - title: Made Mistakes
+#    url: http://mademistakes.com
+#    external: true
+  - title: People
+    url: /people/
+  - title: Former Students
+    url: /former-students/
+#  - title: Genetics, ESALQ/USP
+#    url: http://www.genetica.esalq.usp.br/
+#    external: true
+
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
