Adding coordinator name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title:            Statistical Genetics Laboratory
-description:      Department of Genetics, ESALQ/USP
+description:      Department of Genetics, ESALQ/USP (coordinator: A
+Augusto F Garcia)
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://augusto-garcia.github.io/minimal-mistakes/
 
