Adding coordinator name

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:              http://augusto-garcia.github.io/minimal-mistakes/
 owner:
   name:           Statistical Genetics
   avatar:         LogoLab.jpg
-  bio:            "Department of Genetics, ESALQ/USP (coordinator: A Augusto F Garcia)"
+  bio:            "Department of Genetics, ESALQ/USP (coord.: A Augusto F Garcia)"
   email:          aafgarci@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: aafgarci       
