Adding Facebook address

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   email:          aafgarci@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: aafgarci       
-  facebook:       
+  facebook: https://www.facebook.com/groups/611026095639818/      
   github:         
   stackoverflow: 
   linkedin:       
