--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Statistical Genetics Laboratory
 description:      Research group that studies the genetic architecture of quantitative traits 
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://augusto-garcia.github.io/minimal-mistakes
+url:              http://augusto-garcia.github.io/statgen-esalq
 
 # Owner/author information
 owner:
