--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: aafgarci       
   facebook: https://www.facebook.com/groups/611026095639818/      
-  github:         
+  github: https://github.com/augusto-garcia/statgen-esalq         
   stackoverflow: 
   linkedin:       
   instagram:      
