Corrections on Facebook and github addresses

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ owner:
   email:          aafgarci@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: aafgarci       
-  facebook: https://www.facebook.com/groups/611026095639818/      
-  github: https://github.com/augusto-garcia/statgen-esalq         
+  facebook: groups/611026095639818/      
+  github: augusto-garcia/statgen-esalq         
   stackoverflow: 
   linkedin:       
   instagram:      
