Fittin the logo as the avatar, removing folder build

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url:              http://augusto-garcia.github.io/statgen-esalq
 # Owner/author information
 owner:
   name:           Department of Genetics
-  avatar:         LogoLab.png
+  avatar:         LogoLabAvatar.png
   bio:            "ESALQ/USP"
   email:          aafgarci@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
