--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
   facebook: groups/611026095639818/      
   github: augusto-garcia/statgen-esalq         
   stackoverflow: 
-  linkedin:       
+  linkedin: groups/Statistical-Genetics-Laboratory-8124864/about      
   instagram:      
   lastfm:         
   tumblr: 
@@ -26,7 +26,7 @@ owner:
   google_plus: https://plus.google.com/u/0/communities/103592582757513673768
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics: UA-51935714-1  
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:        
@@ -50,6 +50,8 @@ links:
 #  - title: Genetics, ESALQ/USP
 #    url: http://www.genetica.esalq.usp.br/
 #    external: true
+  - title: Contact
+    url: /contact/
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
