Adding contact information

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
   facebook: groups/611026095639818/      
   github: augusto-garcia/statgen-esalq         
   stackoverflow: 
-  linkedin: groups/Statistical-Genetics-Laboratory-8124864/about      
+  linkedin: http://www.linkedin.com/groups/Statistical-Genetics-Laboratory-8124864/about
   instagram:      
   lastfm:         
   tumblr: 
