Resize images and fix compiling error

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ timezone:    America/Sao_Paulo
 future:      true
 pygments:    true
 markdown:    kramdown
+highlighter: rouge
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title/
