Adding softwares link

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ links:
 #    external: true
   - title: Contact
     url: /contact/
+  - title: Softwares
+    url: /softwares/
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
